--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>ShoppingApp</title>
+  <title>Easy Market</title>
   <base href="/">
   <link href="https://fonts.googleapis.com/css?family=Mansalva&display=swap" rel="stylesheet">
   <meta name="viewport" content="width=device-width, initial-scale=1">
